tests/lean/module.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
Error (line: 2, pos: 5) unknown identifier 'IdMacro'
