tests/lean/module.lean
(* The following command should fail because the IdMacro is not defined *)
Show IdMacro 20.